# petshop

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  dependabot.yml  docker-compose.ci.yaml  docker-compose.ci.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
docker/: client-playground.dockerfile  dockerfile  envoy-compose.dockerfile  envoy-localhost.dockerfile  envoy.dockerfile  go-tools.dockerfile  integration-test.dockerfile  node-tools.dockerfile  oauth2-proxy.dockerfile  prometheus.dockerfile  rust-cache.dockerfile  rust-tools.dockerfile  server.dockerfile  sphinx.dockerfile
docker/envoy/: dockerfile  envoy-compose.yaml  envoy-compose.yml  envoy-localhost.yaml  envoy-localhost.yml  envoy.yaml  envoy.yml
docker/go-tools/: dockerfile  go.mod  go.sum
docker/node-tools/: .gitignore  package-lock.json  package.json  tsconfig.json
docker/node-tools/client-playground/: index.html  script.ts  style.css
docker/node-tools/clients/: README.md  package-lock.json  package.json  tsconfig.json
docker/node-tools/integration-test/: example.spec.ts  jasmine.json
docker/node-tools/ng-swagger/: api-interceptor.ts
docker/oauth2-proxy/: oauth2-proxy.template.cfg
docker/prometheus/: alert.rules.yml  prometheus.yml
docker/server/: config.toml  wait-for-it.sh
docker/sphinx/: Makefile  conf.py  index.rst  make-html.sh
examples/auth/: README.md  client-oauth2-proxy.dockerfile  docker-compose.yaml  docker-compose.yml  envoy.dockerfile  envoy.yaml  envoy.yml  prometheus.dockerfile  prometheus.yml  server-oauth2-proxy.dockerfile
examples/authz/: .gitignore  README.md  docker-compose.yml  envoy.dockerfile  envoy.yml
examples/cron/: README.md  cron.dockerfile  docker-compose.yaml  example_job.sh
examples/ghcr/: README.md  docker-compose.yml  envoy.yml
examples/helm/: .gitignore  .helmignore  Chart.yaml  README.md  postgresql.yaml  prometheus.yaml  values.yaml
examples/helm/templates/: NOTES.txt  _helpers.tpl  cron.yml  cronjob.yml  deployment.yml  istio.yml  secret.yaml  secret.yml  service.yaml  service.yml  serviceaccount.yml
examples/tfb/: .gitignore  README.md  benchmark_config.json  config.toml  docker-compose.yaml  docker-compose.yml  envoy-tonic.dockerfile  envoy.yaml  envoy.yml
examples/webhooks/: README.md
manual/: windows.md
proto/: Cargo.toml  build.rs
proto/proto/: api.proto  health.proto  messages.proto
proto/proto/google/api/: annotations.proto  field_behavior.proto  http.proto  httpbody.proto
proto/proto/google/protobuf/: descriptor.proto
proto/proto/google/rpc/: status.proto
proto/proto/protoc-gen-openapiv2/options/: annotations.proto  openapiv2.proto
proto/src/: lib.rs
server/: Cargo.toml
server/src/: api.rs  config.rs  internal.rs  main.rs  metrics.rs
server/src/api/: example.rs  mod.rs  petshop.rs  tfb.rs
server/src/csrf/: mod.rs  service.rs
server/src/jobs/: mod.rs
server/src/metrics/: mod.rs  service.rs
server/src/postgres/: mod.rs
server/src/services/: api.rs  mod.rs  tfb.rs
server/src/services/auth/: mod.rs
server/src/services/clients/: mod.rs
server/src/services/csrf/: mod.rs
server/src/services/metrics/: mod.rs  service.rs
