[package]
name = "petshop_proto"
version = "0.1.0"
description = "Protobuf definitions library crate"
authors = ["Sam Ward <mail@mojzu.net>"]
edition = "2018"

[lib]

# DEPEND: Update crate dependencies

[dependencies]
bytes = "1.0"
prost = "0.7"
prost-types = "0.7"
tonic = "0.4"

[build-dependencies]
tonic-build = "0.4"
