[package]
name = "petshop_proto"
version = "0.3.4"
description = "Protobuf definitions library crate"
authors = ["Sam Ward <mail@mojzu.net>"]
edition = "2018"

[lib]

# DEPEND: Update crate dependencies (and cargo update)

[dependencies]
bytes = "1.0"
prost = "0.7"
prost-types = "0.7"
tonic = "0.4"

validator = { version = "0.13", features = ["derive"] }

[build-dependencies]
tonic-build = "0.4"
