[package]
name = "petshop_server"
version = "0.1.0"
authors = ["Sam Ward <mail@mojzu.net>"]
edition = "2018"

[[bin]]
name = "petshop-server"
path = "src/main.rs"

[features]
default = []

[dependencies]
anyhow = "1.0"
env_logger = "0.8.3"
log = "0.4"
petshop_proto = { path = "../proto" }
prost = "0.7"
tokio = { version = "1.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.4"
