[package]
name = "petshop_server"
version = "0.3.0"
description = "Server binary crate"
authors = ["Sam Ward <mail@mojzu.net>"]
edition = "2018"

[[bin]]
name = "petshop_server"
path = "src/main.rs"

[features]
default = []

# DEPEND: Update crate dependencies (and cargo update)

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.0"

petshop_proto = { path = "../proto" }
prost = "0.7"
prost-types = "0.7"
tokio = { version = "1.4", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.4"
tonic-health = "0.3"
hyper = "0.14"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tower = { version = "0.4" }

validator = { version = "0.13", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
config = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["json"] }
tracing-futures = "0.2"

# FIXME: Using later versions here breaks tracing:instrument in tonic async trait
async-trait = "=0.1.17"

prometheus = { version = "0.12", features = ["process"] }
opentelemetry = { version = "0.13", features = ["metrics", "serialize"] }
opentelemetry-prometheus = { version = "0.6" }

deadpool-postgres = "0.7"
postgres-types = { version = "0.2", features = ["derive"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-0_8", "with-serde_json-1"] }

rand = "0.8"
http = "0.2"
cookie = "0.15"
time = "0.2"
url = { version = "2.2", features = ["serde"] }

handlebars = "3.5"
